Fixing input width on mobile

--- a/src/css/structure.css
+++ b/src/css/structure.css
@@ -62,6 +62,10 @@ progress {
 	font-family: var(--body-font);
 }
 
+td > input {
+	width: 100%;
+}
+
 /* User Input Items */
 
 fieldset {
